[package]
name = "step-staking"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
jupiter-swap-api-client = "0.1.0"
serde = "1.0.203"
sha2 = "0.10.8"
solana-client = "2.0.3"
solana-sdk = "2.0.1"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
znap = "0.1.31"
